# gemsplat

./: .gitignore  .gitmodules  README.md  pyproject.toml
gemsplat/: __init__.py  gemsplat.py  gemsplat_config.py  gemsplat_pipeline.py  viewer_utils.py
gemsplat/clip/: clip.py  model.py
gemsplat/data/: gemsplat_datamanager.py
gemsplat/data/utils/: feature_dataloader.py  maskclip_dataloader.py  utils.py
gemsplat/encoders/: image_encoder.py  maskclip_encoder.py
gemsplat/rasterization_routines/: rendering.py
gemsplat/scripts/: build_rrt_dataset.py  eval.py  eval_callable.py  eval_callable_edited.py  genHemisphere.py  genPoses.py  getSemanticPoints.py  hemisphere_generation.py  rrt3config.yml  rrt_datagen_v5.py  rrt_datagen_v6.py  rrt_datagen_v7.py  rrt_datagen_v8.py  rrt_datagen_v9.py
gemsplat/scripts/SSV/: nerf_utils.py
gemsplat/scripts/utils/: nerf_utils.py  scene_editing_utils.py
